@@ -1,3 +1,9 @@
+2011-07-22 belangeo <belangeo@gmail.com>
+
+    * Added new function : reducePoints(), apply a Douglas–Peucker curve reduction algorithm. 
+      Added loadRecFile() method to table objects.
+    - rev 688
+
 2011-07-20 belangeo <belangeo@gmail.com>
 
     * Added new objects : ControlRec and ControlRead. Records automations at user-defined sampling rate.
